objects/Client_Referrals__c.object
<CustomObject>
    <fields>
        <fullName>Approx_of_Employees__c</fullName>
        <label>Approx. # of Employees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Client_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Relationship_to_Referral__c</fullName>
        <label>Client Contact Relationship to Referral</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super Green</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Client_Referral_Statuses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_s_Email__c</fullName>
        <label>Contact's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_s_Phone__c</fullName>
        <label>Contact's Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_s_Title__c</fullName>
        <label>Contact's Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Department__c</fullName>
        <label>Home Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Support Teams</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Island__c</fullName>
        <label>Island</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Island</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Oahu</fullName>
                </value>
                <value>
                    <fullName>Other (Specify in Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NBR_Initiative_Type__c</fullName>
        <inlineHelpText>If this referral is tied to any 2014 initiative, please indicate which</inlineHelpText>
        <label>NBR Initiative Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imp-60</fullName>
                </value>
                <value>
                    <fullName>Untouched-80+</fullName>
                </value>
                <value>
                    <fullName>Reassigned Clients</fullName>
                </value>
                <value>
                    <fullName>VOC Follow-up</fullName>
                </value>
                <value>
                    <fullName>Boomerang (Former Client)</fullName>
                </value>
                <value>
                    <fullName>Castle Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Business_Contact__c</fullName>
        <label>Name of Business Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferralStatus__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                    <default>true</default>
                    <label>In-Progress</label>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Count__c</fullName>
        <label>Referral Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Owner__c</fullName>
        <label>Referral Owner</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Business_Name__c</fullName>
        <label>Referred Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>Client Referral Owner and Status</description>
    <label>Client Referral</label>
    <nameField>
        <label>Client Referral</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Department</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Home_Department__c , "")</errorConditionFormula>
        <errorMessage>Please select your Home Department to continue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Successful_Referral</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( ReferralStatus__c , "Successful"),  ISBLANK( Client_Contact__c ),  ISBLANK( Client_Relationship_to_Referral__c),  ISBLANK( Referred_Business_Name__c),  ISBLANK( Type_of_Business__c),  ISBLANK( Name_of_Business_Contact__c),  ISBLANK( Contact_s_Title__c),  ISBLANK( Contact_s_Phone__c),  ISBLANK( Approx_of_Employees__c))</errorConditionFormula>
        <errorMessage>Referral is incomplete.  Please fill every field to submit.</errorMessage>
    </validationRules>
</CustomObject>